--- a/TypeScript/2.Interface.md
+++ b/TypeScript/2.Interface.md
@@ -148,8 +148,107 @@ interface ClockInterface {
   currentTime: Date;
 }
 
-class Clock imprements ClockInterface {
+class Clock implements ClockInterface {
   currentTime: Date = new Date();
   constructor(h: number, m: number) { }
 }
+```
+
+## 클래스의 스태틱과 인스턴스의 차이점
+- 클래스와 인터페이스를 다룰 때, 클래스는 `static`과 `instance` 타입을 가짐.
+- 생성 시그니처로 인터페이스를 생성하고, 클래스를 생성하려고 하면, 인터페이스를 `implements`할 때, 에러가 발생함
+```
+interface ClockConstructor {
+    new (hour: number, minute: number);
+}
+
+class Clock implements ClockConstructor {
+    currentTime: Date;
+    constructor(h: number, m: number) { }
+}
+```
+- 클래스가 인터페이스를 `implements`할 때, 클래스의 인스턴스만 검사하기 때문임. 생성자가 스태틱이기 때문에, 이 검사에 포함되지 않음.
+- 
+```
+// 생성자 정의
+interface ClockConstructor {
+    new (hour: number, minute: number): ClockInterface;
+}
+// 인스턴스 메서드 정의
+interface ClockInterface {
+    tick(): void;
+}
+
+function createClock(ctor: ClockConstructor, hour: number, minute: number): ClockInterface {
+    return new ctor(hour, minute);
+}
+생성자 메서드
+class DigitalClock implements ClockInterface {
+    constructor(h: number, m: number) { }
+    tick() {
+        console.log("beep beep");
+    }
+}
+class AnalogClock implements ClockInterface {
+    constructor(h: number, m: number) { }
+    tick() {
+        console.log("tick tock");
+    }
+}
+
+let digital = createClock(DigitalClock, 12, 17);
+let analog = createClock(AnalogClock, 7, 32);
+```
+- 또 다른 쉬운 방법은 클래스표현을 사용
+```
+interface ClockConstructor {
+  new (hour: number, minute: number);
+}
+
+interface ClockInterface {
+  tick();
+}
+
+const Clock: ClockConstructor = class Clock implements ClockInterface {
+  constructor(h: number, m: number) {}
+  tick() {
+      console.log("beep beep");
+  }
+}
+```
+
+## 인터페이스 확장
+- 인터페이스들도 클래스처럼 extend가 가능
+- 한 인터페이스의 멤버를 다른 인터페이스에 복사 가능
+- 인터페이스를 재사용성 높은 컴포넌트로 쪼갤 때, 유연함을 제공
+```
+interface Shape {
+  color: string;
+}
+interface Square extends Shape {
+  sideLength: number;
+}
+
+let square = {} as Square;
+square.coor = 'blue';
+square.sideLength = 10;
+```
+- 인터페이스는 여러 인터페이스를 확장할 수 있어, 모든 인터페이스의 조합을 만들어낼 수 있음.
+```
+interface Shape {
+    color: string;
+}
+
+interface PenStroke {
+    penWidth: number;
+}
+
+interface Square extends Shape, PenStroke {
+    sideLength: number;
+}
+
+let square = {} as Square;
+square.color = "blue";
+square.sideLength = 10;
+square.penWidth = 5.0;
 ```
