하이브리트 타입, 클래스 확장한 인터페이스

--- a/TypeScript/2.Interface.md
+++ b/TypeScript/2.Interface.md
@@ -252,3 +252,61 @@ square.color = "blue";
 square.sideLength = 10;
 square.penWidth = 5.0;
 ```
+
+## 하이브리드 타입
+- 인터페이스는 실제 JavaScript 세계에 존재하는 다양한 타입들을 기술할 수 있음
+- javascript의 동적이고 유연한 특성 때문에, 위에서 설명했던 몇몇 타입의 조합으로 동작하는 객체를 마주할 수 있음
+```
+interface Counter {
+  (start: number): string;
+  interval: number;
+  reset(): void;
+}
+
+function getCounter(): Counter {
+  let counter = (function (start: number) { }) as Counter;
+  counter.interval = 123;
+  counter.reset = function () { };
+  return counter;
+}
+
+let c = getCounter();
+c(10);
+c.reset();
+c.interval = 5.0;
+```
+3rd-party javascript와 상호작용할 때, 타입의 형태를 완전히 기술하기 위해 위와 같은 패턴을 사용해야 할 수도 있음
+
+## 클래스를 확장한 인터페이스
+인터페이스 타입이 클래스 타입을 확장하면, 클래스의 멤버는 상속받지만 구현은 상속받지 않음.</br>
+이것은 인터페이스가 구현을 제공하지 않고, 클래스의 멤버 모두를 선언한 것과 마찬가지임. 인터페이스는 심지어 기초 클래스의 `private`와 `protected` 멤버도 상속받음 -> 인터페이스가 `private`혹은 `protected` 멤버를 포함한 클래스를 확장할 수 있다는 뜻이고, 인터페이스 타입은 그 클래스나 하위클래스에 의해서만 구현 될 수 있음.</br>
+이는 거대한 상속계층을 가지고 있을 때 유용하지만, 특정 프로퍼티를 가진 하위클래스에서만 코드가 동작하도록 지정하는데도 유용함.
+```
+class Control {
+    private state: any;
+}
+
+interface SelectableControl extends Control {
+    select(): void;
+}
+
+class Button extends Control implements SelectableControl {
+    select() { }
+}
+
+class TextBox extends Control {
+    select() { }
+}
+
+// Error: Property 'state' is missing in type 'Image'.
+class Image implements SelectableControl {
+    private state: any;
+    select() { }
+}
+
+class Location {
+
+}
+```
+`SelectableControl`은 private `state` 프로퍼티를 포함하여, `Control` 의 모든 멤버를 가지고 있다. `state` 는 private 멤버이기 때문에, `SelectableControl` 를 구현하는 것은 `Control` 의 자식에게만 가능함. `Control` 의 자식만 같은 선언에서 유래된 `state` private 멤버를 가질 수 있기 때문이고, private 멤버들이 호환되기 위해 필요함.   
+`Control` 클래스 안에서 `SelectableControl` 의 인스턴스를 통해서 state private 멤버에 접근할수 있음. `SelectableControl` 은 `select` 메서드를 가진 `Control` 과 같은 역할을 함. `Button` 과 `TextBox` 클래스들은 `SelectableControl` 의 하위타입이지만 `Image` 와 `Location` 클래스는 아님
