--- a/TypeScript/5.eunms.md
+++ b/TypeScript/5.eunms.md
@@ -2,7 +2,7 @@
 
 ## 숫자 열거형
 열거형은 `enum `키워드를 사용해 정의할 수 있음
-```
+```typescript
 enum Direction {
   Up = 1,
   Down, // 2
@@ -12,7 +12,7 @@ enum Direction {
 ```
 `Up `이 1로 초기화되면 그 지점부터 뒤따르는 멤버들은 자동으로 증가된 값을 가짐   
 초기화 하지않으면 0부터 시작함   
-```
+```typescript
 enum E {
   A = getSomeValue(),
   B, // 오류
@@ -22,7 +22,7 @@ enum E {
 
 ## 문자열 열거형
 문자열 열거형에서 각 멤버들은 문자열 리터럴 또는 다른 문자열 열거형의 멤버로 상수 초기화 해야 함
-```
+```typescript
 enum Direction {
   Up = "UP",
   Down = "DOWN",
@@ -33,7 +33,7 @@ enum Direction {
 문자열 열거형은 숫자 열거형 처럼 자동-증가하는 기능이 없지만, "직혈화"를 잘한다는 이점이 있음
 
 ## 이종 열거형
-```
+```typescript
 eunm BooleanLikeHeterogeneousEnum {
   No = 0,
   Yes = "YES",
@@ -44,11 +44,11 @@ eunm BooleanLikeHeterogeneousEnum {
 ## 계산된 멤버와 상수 멤버
 각 열거형의 멤버는 상수이거나 계산된 값일 수 있음
   - 열거형의 첫 번째 데이터이며 초기화 값이 없는 경우, 0으로 값이 할당됨
-  ```
+  ```typescript
   enum E { X }
   ```
   - 초기화 값이 없으며 숫자 상수로 초기화된 열거형 멤버 뒤에 따라 나오는 경우, 앞에 나온 상수 값에 1씩 증가한 값을 상수로 가짐
-  ```
+  ```typescript
   enum E1 { X, Y, Z } // 0, 1, 2
   enum E2 {
     A = 1, B, C // 1, 2, 3
@@ -61,7 +61,7 @@ eunm BooleanLikeHeterogeneousEnum {
     4. 상수 열거형 표현식에 단항 연산자 `+`, `-`, `~`를 사용한 경우
     5. 상수 열거형 표현식을 이중 연산자 `+`, `-`, `*`, `/`, `%`, `<<`, `>>`, `>>>`, `$`, `|`, `^`의 피연산자로 사용할 경우
     6. 상수 열거형 표현식이 `NaN` 이거나 `Infinity`이면 컴파일 시점에 오류
-  ```
+  ```typescript
   enum FileAccess {
     // 상수 멤버
     None,
@@ -75,7 +75,7 @@ eunm BooleanLikeHeterogeneousEnum {
 
 ## 유니온 열거형과 열거형 멤버 타입
 - 열거형 멤버를 타입처럼 사용할 수 있음
-```
+```typescript
 enum ShapeKind {
   Circle,
   Squre,
@@ -96,7 +96,7 @@ let c: Circle = {
 }
 ```
 - 열거형 타입 자체가 효율적으로 각각의 열거형 멤버의 유니온이 됨
-```
+```typescript
 enum E {
   Foo,
   Bar,
@@ -111,8 +111,8 @@ function f(x: E) {
 ```
 
 ## 추후에 볼 것
-- [x] 런타임에서 열거형
-- [x] 컴파일 시점에서 열거형
-- [x] 역 매핑
-- [x] `const` 열거형
-- [x] Ambient 열거형
+- [ ] 런타임에서 열거형
+- [ ] 컴파일 시점에서 열거형
+- [ ] 역 매핑
+- [ ] `const` 열거형
+- [ ] Ambient 열거형
