--- a/TypeScript/2.Interface.md
+++ b/TypeScript/2.Interface.md
@@ -4,7 +4,7 @@
 - 인터페이스는 상호 간에 정의한 약속 혹은 규칙을 의미
 
 ## 첫 번째 인터페이스 (Our First Interface)
-```
+```typescript
 // 기본 예
 const printLabel = (labelObj: {label: string}) => {
   console.log(labelObj.label);
@@ -33,7 +33,7 @@ printLabel(myObj);
 ## 선택적 프로퍼티 (Optional Properties)
 - 인터페이스의 모든 프로퍼티가 필요한 것은 아니기 때문에 어떤 조건에서만 존재하거나 아예 없을 수도 있음.
 - 선택적 프로퍼티는 선언에서 프로터티 이름 끝에 `?` 를 붙어 표시
-```
+```typescript
 interface SquareConfig {
     color?: string;
     width?: number;
@@ -56,7 +56,7 @@ let mySquare = createSquare({color: "black"});
 ## 읽기전용 프로퍼티 (Readonly Properties)
 - 인터페이스로 객체를 처음 생성할 때만 값을 할당하고 그 이후에는 변경할 수 없는 속성을 의미
 - `readonly` 속성을 앞에 붙임
-```
+```typescript
 interface Point {
   readonly x: number;
   readonly y: number;
@@ -68,7 +68,7 @@ p1.x = 1 // 할당 후 수정 불가 오류
 
 ## 읽기 전용 배열 (readonly Array)
 - 배열을 선언할 때 `ReadonlyArray<T>` 타입을 사용하여 읽기 전용 배열을 생성할 수 있음
-```
+```typescript
 let a: number[] = [1, 2, 3, 4];
 let ro: ReadonlyArray<number> = a;
 
@@ -83,7 +83,7 @@ a = ro; // 오류!
 
 ## 초과 프로퍼티 검사 (Excess Property Checks)
 타입스크립트는 인터페이스를 이용하여 객체를 선언할 때 좀 더 엄일한 속성 검사를 진행
-```
+```typescript
 interface SqueareConfig {
   color?: string;
   width?: number;
@@ -99,11 +99,11 @@ let mySquare = createSquare({colour: "red", width: 100});
 - typescript는 이 코드에 버그가 있을 수 있다고 생각함. 객체 리터럴은 다른 변수에 할당할 때나 인수로 전달할 때, 특별한 처리를 받고 초과 프로퍼티 검사를 받음.
 - 만약 객체 리터럴이 "대상 타입"을 갖고 있지 않은 프로퍼티를 갖고 있으면, 에러 발생
 - 이 검사를 피하는 방법
-```
+```typescript
 let mySquare = createSquare({opacity: 0.5, width: 100} as SquareConfing);
 ```
 - 인터페이스 정의하지 않은 속성들을 추가로 사용하고 싶을 때는 아래와 같은 방법 사용.
-```
+```typescript
 interface SqueareConfig {
   color?: string;
   width?: number;
@@ -113,13 +113,13 @@ interface SqueareConfig {
 
 ## 함수 타입
 인터페이스는 함수의 타입을 정의할 때에도 사용할 수 있음.
-```
+```typescript
 interface login {
   (username: string, password: string): boolean;
 }
 ```
 함수의 인자의 타입과 반환 값의 타입을 정함.
-```
+```typescript
 const loginUser: login = (id: string, pw: string) {
   console.log('로그인 완료');
   return true;
@@ -129,7 +129,7 @@ const loginUser: login = (id: string, pw: string) {
 ## 인덱서블 타입 (Indexable Types)
 - 인덱서블 타입은 인덱싱 할때 해당 반환 유형과 함께 객체를 인덱싱하는 데 사용할 수 있는 타입을 인덱스 시그니처를 가지고 있음.
 - 문자열 인덱스 시그니처는 "사전" 패턴을 기술하는데 강력한 방법이지만, 모든 프로퍼티들이 반환 타입과 일치하도록 강제함. 문자열 인덱스가 `obj.property`가 `obj["property"]` 로도 이용 가능함을 알려줌.
-```
+```typescript
 interface stringArray {
   [index: number]: string;
 }
@@ -142,8 +142,9 @@ let myStr: string = myArray[0];
 
 ## 클래스 타입 (Class Types)
 C#이나 Java처럼 클래스가 일정 조건을 만족하도록 타입 규칙을 정할 수 있음.
+
 ### 인터페이스 구현하기
-```
+```typescript
 interface ClockInterface {
   currentTime: Date;
 }
@@ -157,7 +158,7 @@ class Clock implements ClockInterface {
 ## 클래스의 스태틱과 인스턴스의 차이점
 - 클래스와 인터페이스를 다룰 때, 클래스는 `static`과 `instance` 타입을 가짐.
 - 생성 시그니처로 인터페이스를 생성하고, 클래스를 생성하려고 하면, 인터페이스를 `implements`할 때, 에러가 발생함
-```
+```typescript
 interface ClockConstructor {
     new (hour: number, minute: number);
 }
@@ -169,7 +170,7 @@ class Clock implements ClockConstructor {
 ```
 - 클래스가 인터페이스를 `implements`할 때, 클래스의 인스턴스만 검사하기 때문임. 생성자가 스태틱이기 때문에, 이 검사에 포함되지 않음.
 - 
-```
+```typescript
 // 생성자 정의
 interface ClockConstructor {
     new (hour: number, minute: number): ClockInterface;
@@ -182,7 +183,7 @@ interface ClockInterface {
 function createClock(ctor: ClockConstructor, hour: number, minute: number): ClockInterface {
     return new ctor(hour, minute);
 }
-생성자 메서드
+// 생성자 메서드
 class DigitalClock implements ClockInterface {
     constructor(h: number, m: number) { }
     tick() {
@@ -200,7 +201,7 @@ let digital = createClock(DigitalClock, 12, 17);
 let analog = createClock(AnalogClock, 7, 32);
 ```
 - 또 다른 쉬운 방법은 클래스표현을 사용
-```
+```typescript
 interface ClockConstructor {
   new (hour: number, minute: number);
 }
@@ -221,7 +222,7 @@ const Clock: ClockConstructor = class Clock implements ClockInterface {
 - 인터페이스들도 클래스처럼 extend가 가능
 - 한 인터페이스의 멤버를 다른 인터페이스에 복사 가능
 - 인터페이스를 재사용성 높은 컴포넌트로 쪼갤 때, 유연함을 제공
-```
+```typescript
 interface Shape {
   color: string;
 }
@@ -234,7 +235,7 @@ square.coor = 'blue';
 square.sideLength = 10;
 ```
 - 인터페이스는 여러 인터페이스를 확장할 수 있어, 모든 인터페이스의 조합을 만들어낼 수 있음.
-```
+```typescript
 interface Shape {
     color: string;
 }
@@ -256,7 +257,7 @@ square.penWidth = 5.0;
 ## 하이브리드 타입
 - 인터페이스는 실제 JavaScript 세계에 존재하는 다양한 타입들을 기술할 수 있음
 - javascript의 동적이고 유연한 특성 때문에, 위에서 설명했던 몇몇 타입의 조합으로 동작하는 객체를 마주할 수 있음
-```
+```typescript
 interface Counter {
   (start: number): string;
   interval: number;
@@ -281,7 +282,7 @@ c.interval = 5.0;
 인터페이스 타입이 클래스 타입을 확장하면, 클래스의 멤버는 상속받지만 구현은 상속받지 않음.</br>
 이것은 인터페이스가 구현을 제공하지 않고, 클래스의 멤버 모두를 선언한 것과 마찬가지임. 인터페이스는 심지어 기초 클래스의 `private`와 `protected` 멤버도 상속받음 -> 인터페이스가 `private`혹은 `protected` 멤버를 포함한 클래스를 확장할 수 있다는 뜻이고, 인터페이스 타입은 그 클래스나 하위클래스에 의해서만 구현 될 수 있음.</br>
 이는 거대한 상속계층을 가지고 있을 때 유용하지만, 특정 프로퍼티를 가진 하위클래스에서만 코드가 동작하도록 지정하는데도 유용함.
-```
+```typescript
 class Control {
     private state: any;
 }
