# modify: null & undefined 내용 추가

--- a/TypeScript/1.basicType.md
+++ b/TypeScript/1.basicType.md
@@ -58,6 +58,9 @@
   ```
 - Null & Undefined
   - `null` 과 `undefined` 둘 다 각각 자신의 타입으로 `undefined`, `null`로 사용
+  - `null` 과 `undefined`는 다른 타입의 하위 타입
+    -  ex) `number` 타입에 null과 undefined에 할당할 수 있음
+  - `--strictNullChecks`를 활성화하면, `null`과 `undefined`는 오직 `any`와 각자 자신들 타입에만 할당 가능 (`undefined`는 `void`에 할당 가능)
   ```typescript
   // 이 밖에 이 변수들에 할당할 수 있는 값은 없음
   let u: undefined = undefined;
