docs: readonlyArray 내용 추가

--- a/TypeScript/2.Interface.md
+++ b/TypeScript/2.Interface.md
@@ -68,6 +68,8 @@ p1.x = 1 // 할당 후 수정 불가 오류
 
 ## 읽기 전용 배열 (readonly Array)
 - 배열을 선언할 때 `ReadonlyArray<T>` 타입을 사용하여 읽기 전용 배열을 생성할 수 있음
+- `ReadonlyArray`은 일반 배열에 재할당이 불가능함
+  - 타입 단언으로 오버라이드하는 경우에는 가능
 ```typescript
 let a: number[] = [1, 2, 3, 4];
 let ro: ReadonlyArray<number> = a;
